@@ -1,4 +1,4 @@
 AUX genkernel.bash 2438 RMD160 b3d8e4436d8768c07d18c5aaff9c14fc16641729 SHA1 e15a9c6ef506aa6872a6a97d26751246dedded04 SHA256 e7de9771ba79ef878e2c9a21a1c1720f092c6047d3cc7d4a49ff6b90e7e2c248
-EBUILD genkernel-9999.ebuild 1796 RMD160 9a916d3a4a7d80a7dd1fadf4a6f60e1d34315ee6 SHA1 6a4609ccfd269331446778e0f1ce8d92a7ead178 SHA256 f4c685874a6a6f9c5085809f2eb388f7942f73eed27648964b022f5b5cd3ecfa
-MISC ChangeLog 851 RMD160 ca0e41dbeb29db20b83555412ab4ae187771a133 SHA1 37f8b63dc2da9012d05edda92c02ba3f6a9117c4 SHA256 56a643d9f4c3aa55321da4f42b8003b3eed8f6972902298182af710a507f2fd9
+EBUILD genkernel-9999.ebuild 2029 RMD160 e73ab16c560d3e97fb6e57df63f4ac635cf4f194 SHA1 dfd99aff4206b5d35d2abe5da0f82425883aae9c SHA256 b447d7122004861e64f45a3d731ce3258c1545d871a7f1fd9d36744848bcb470
+MISC ChangeLog 1046 RMD160 97a6bbd628af1fd0c7874ae1fbb243ed25777075 SHA1 3937f89e6e4a2e944f81bc9e92b2b6a8d6106e47 SHA256 429666fcd44ddffd847cc48bd3ffe65fb8c9f7b83eaecf8d2fa2650c67fb1584
 MISC metadata.xml 264 RMD160 61ac293e31501c99a53a7b02062116509a55a6e5 SHA1 3fa6da897b3012a3df857ccc3a8b204fca861cbe SHA256 80a94e475cebc484cb45a3d232fc8446db1eea8ae7c09c52680f25fde0784a34
